risc0/zirgen/dsl/test/repro/missing_base_lookup.zir
// RUN: not zirgen --emit=ast %s 2>&1 | FileCheck %s
// CHECK: error: missing base expression for member lookup

component Top() {
  x := Reg(1);
  y := Reg(x@1 +.x);
}

